working vscode launch.json config

--- a/generators/app/templates/Properties/launchSettings.json
+++ b/generators/app/templates/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PV.MyDashboard.App": {
+    "<%= appName %>": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
