--- a/generators/app/templates/ClientApp/package.json
+++ b/generators/app/templates/ClientApp/package.json
@@ -25,13 +25,7 @@
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "jquery": "3.3.1",
-    "popper.js": "^1.14.3",
-    "devextreme": "18.2.8",
-    "devextreme-angular": "18.2.8"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
