Copy over template v1.0.0 (#3)

--- a/generators/app/templates/.gitignore
+++ b/generators/app/templates/.gitignore
@@ -25,13 +25,13 @@ speed-measure-plugin.json
 
 # IDE - VSCode
 .vscode/*
-.vscode/settings.json
+!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
 
-#/src/app/read-me
+#/src/app/welcome
 
 # misc
 /.sass-cache
