minor changes and restructuring (#5)

--- a/generators/app/templates/app/package.json
+++ b/generators/app/templates/app/package.json
@@ -7,6 +7,7 @@
     "start:local": "concurrently \"ng serve -o -c local\" \"dotnet run watch -p ./../api\"",
     "start:prod": "ng run <%= appName %>:app-shell && http-server -c-1 ./dist/<%= appName %> -p 4200 -o",
     "serve": "ng serve",
+    "serve:local": "ng serve -o -c local",
     "serve:prod": "ng serve --prod",
     "build": "ng build",
     "build:prod": "ng run <%= appName %>:app-shell",
