--- a/generators/app/templates/app/.vscode/launch.json
+++ b/generators/app/templates/app/.vscode/launch.json
@@ -4,10 +4,10 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Launch dev build",
+      "name": "Launch Chrome - constants.local.ts",
       "url": "http://localhost:4200",
       "webRoot": "${workspaceFolder}",
-      "preLaunchTask": "npm: serve"
+      "preLaunchTask": "npm: serve:local"
     },
     {
       "type": "chrome",
