--- a/generators/app/templates/app/package.json
+++ b/generators/app/templates/app/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "start:local": "concurrently \"ng serve -o -c local\" \"dotnet run watch -p ./api\"",
+    "start:local": "concurrently \"ng serve -o -c local\" \"dotnet run watch -p ./../api\"",
     "start:prod": "ng run <%= appName %>:app-shell && http-server -c-1 ./dist/<%= appName %> -p 4200 -o",
     "serve": "ng serve",
-    "serve:local": "ng serve -o -c local",
+    "serve:local": "ng serve -c local",
     "serve:prod": "ng serve --prod",
     "build": "ng build",
     "build:prod": "ng run <%= appName %>:app-shell",
@@ -18,38 +18,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.15",
-    "@angular/cdk": "^7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "^7.0.0",
-    "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/platform-server": "^7.2.0",
-    "@angular/pwa": "~0.12.0",
-    "@angular/router": "~7.2.0",
-    "@angular/service-worker": "~7.2.0",
+    "@angular/animations": "^8.2.12",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "~8.2.12",
+    "@angular/compiler": "~8.2.12",
+    "@angular/core": "~8.2.12",
+    "@angular/forms": "~8.2.12",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.12",
+    "@angular/platform-browser-dynamic": "~8.2.12",
+    "@angular/platform-server": "^8.2.12",
+    "@angular/router": "~8.2.12",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular-devkit/build-angular": "~0.803.15",
+    "@angular/cli": "~8.3.15",
+    "@angular/compiler-cli": "~8.2.12",
+    "@angular/language-service": "~8.2.12",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "angular-tslint-rules": "^1.18.0",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.0.1",
     "concurrently": "^4.1.2",
-    "http-server": "0.9.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -62,6 +58,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.17.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.5.3"
   }
 }
